# fast_zero

./: .gitignore  README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 110e87b529b4_update_users_table_add_collum_updated_at.py  2dd52ae7df0b_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_model.py  test_models.py  test_security.py  test_users.py
