[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Diogo Caribé <dogosousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.roof]
line-lenfth = 79
extend-exclude = ['migrations']

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[tool.roof]
line-lenfth = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
